Layout issues fixed

--- a/src/style.css
+++ b/src/style.css
@@ -27,9 +27,9 @@ a:hover {
 body {
   margin: 0;
   display: flex;
-  place-items: center;
+  /* place-items: center; */
   min-width: 320px;
-  min-height: 120vh;
+  min-height: 100vh;
   background: #0a0e1a;
   cursor: none;
   
